<resources>
    <string name="app_name">crazytransfor</string>
    <string name="transfor_service_name">crazytransforService</string>
    <string name="log_service_name">LogFileStatService</string>
    <string name="description">文件路径:</string>
    <string name="description2">文件内容:</string>
    <string name="file_err">文件格式不对</string>
    <string name="file_empty">文件内容为空</string>
    <string name="open">打开</string>
    <string name="start_float">启动悬浮框</string>
    <string name="str_action_record">录制</string>
    <string name="str_action_stop">停止</string>
    <string name="str_action_save">保存数据</string>
    <string name="str_action_clear">清除数据</string>
    <string name="str_action_start">开始</string>
    <string name="str_action_play">播放</string>
    <string name="str_action_pause">暂停</string>
    <string name="str_action_lahei_err">录确认</string>
    <string name="str_action_user_err">录取消</string>
    <string name="str_action_point_invalid">点数不够，请重新录制</string>
    <string name="dialog_tip">上一次转账到第%1$d个人，是否从这个位置继续开始？</string>
</resources>
