<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/float_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="50dp"
    android:background="#66000000"
    >

    <Button
        android:id="@+id/btn_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_action_record"
        />
    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_record"
        android:text="@string/str_action_start"
        />
    <Button
        android:id="@+id/btn_lahei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_action_lahei_err"
        />
    <Button
        android:id="@+id/btn_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_action_user_err"
        />

</LinearLayout>
